@@ -686,6 +686,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = Pr\u00E1zdn\u0
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = linie
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = bod
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = T\u0159\u00EDda datov\u00E9ho zdroje
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Geometrick\u00FD typ
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Informace
