@@ -685,6 +685,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = \u7A7A\u306E\u
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = \u30E9\u30A4\u30F3
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = \u30DD\u30A4\u30F3\u30C8
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = \u30C7\u30FC\u30BF\u30BD\u30FC\u30B9\u306E\u30AF\u30E9\u30B9
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = \u30B8\u30AA\u30E1\u30C8\u30EA\u30BF\u30A4\u30D7
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = \u60C5\u5831
