@@ -685,6 +685,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = Vazias
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = Linha
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = Ponto
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = Classe DataSource
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = Tipo de geometria
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = Informa\u00E7\u00F5es
