@@ -683,6 +683,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = empty
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = \u0BB5\u0BB0\u0BBF
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = \u0BAA\u0BC1\u0BB3\u0BCD\u0BB3\u0BBF
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = \u0BB5\u0B95\u0BC1\u0BAA\u0BCD\u0BAA\u0BC1  \u0BA4\u0BB0\u0BB5\u0BC1 \u0BAE\u0BC2\u0BB2\u0B99\u0BCD\u0B95\u0BB3\u0BBE\u0B95
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = \u0BB5\u0B9F\u0BBF\u0BB5\u0BB5\u0BBF\u0BAF\u0BB2\u0BCD \u0B85\u0BAE\u0BC8\u0BAA\u0BCD\u0BAA\u0BC1
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = \u0BA4\u0B95\u0BB5\u0BB2\u0BCD
