@@ -688,6 +688,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = \#T\:
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = \#T\:
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = \#T\:
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = \#T\:
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = \#T\:
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = \#T\:
