@@ -701,6 +701,7 @@ org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.empty = \u7A7A
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.line = \u884C
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.point = \u9EDE
 org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.mixed = \#T\:mixed
+org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry.explode-geometry-collections-recursively = \#T\:explode geometry collections recursively
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.DataSource-Class = DataSource\u985E
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Geometry-Type = \u5E7E\u4F55\u578B
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Info = \u4FE1\u606F
